--- a/app/src/main/res/layout/fragment_app_libraries.xml
+++ b/app/src/main/res/layout/fragment_app_libraries.xml
@@ -2,6 +2,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:colorBackground"
@@ -30,6 +31,7 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        tools:listitem="@layout/item_app_library"
         />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
