--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -90,6 +90,7 @@
                 android:layout_gravity="center"
                 android:padding="12dp"
                 android:visibility="gone"
+                tools:visibility="visible"
                 app:size="24dp"
                 />
 
