--- a/app/src/main/res/layout/item_system_reqs.xml
+++ b/app/src/main/res/layout/item_system_reqs.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     >
 
     <LinearLayout
@@ -17,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?textAppearanceBody1"
+            tools:text="Minimum requirements: bla-bla"
             />
 
         <TextView
@@ -24,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?textAppearanceBody1"
+            tools:text="Recommended requirements: bla-bla"
             />
 
     </LinearLayout>
