--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:animateLayoutChanges="true"
     android:background="?android:colorBackground"
     android:id="@+id/login_fragment_root"
@@ -19,7 +20,9 @@
 
     <include
         android:id="@+id/progress"
-        layout="@layout/progress" />
+        layout="@layout/progress"
+        tools:visibility="invisible"
+        />
 
     <ScrollView
         android:layout_width="match_parent"
