--- a/app/src/main/res/layout/item_game_details_languages.xml
+++ b/app/src/main/res/layout/item_game_details_languages.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     style="@style/GameDetailsItem.NoTitle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -24,5 +25,6 @@
         android:paddingLeft="@dimen/default_activity_margin"
         android:paddingRight="@dimen/default_activity_margin"
         android:textAppearance="?textAppearanceBody1"
+        tools:text="English, Russian"
         />
 </LinearLayout>
