--- a/app/src/main/res/layout/item_game_details_screenshots.xml
+++ b/app/src/main/res/layout/item_game_details_screenshots.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.recyclerview.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rvMedia"
     style="@style/GameDetailsItem.NoTitle"
     android:layout_width="match_parent"
     android:layout_height="@dimen/game_details_screenshot_height"
+    tools:listitem="@layout/item_screenshot"
     />
