--- a/app/src/main/res/layout/item_game_details_short_description.xml
+++ b/app/src/main/res/layout/item_game_details_short_description.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     style="@style/GameDetailsItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,12 +14,12 @@
         style="@style/Widget.App.GameDetailsHeadline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?selectableItemBackground"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        tools:ignore="UseCompoundDrawables"
-        android:background="?selectableItemBackground"
         android:paddingLeft="@dimen/default_activity_margin"
         android:paddingRight="@dimen/default_activity_margin"
+        tools:ignore="UseCompoundDrawables"
         >
 
         <TextView
@@ -35,8 +35,8 @@
             android:layout_width="@dimen/touchable_view_half_size"
             android:layout_height="@dimen/touchable_view_half_size"
             android:layout_marginStart="@dimen/spacing_small"
-            app:srcCompat="@drawable/ic_chevron_right"
             android:tint="?colorOnBackground"
+            app:srcCompat="@drawable/ic_chevron_right"
             />
 
     </LinearLayout>
@@ -59,12 +59,18 @@
         android:id="@+id/rvGenres"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_game_description_block_tag"
+        tools:orientation="horizontal"
         />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCategories"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_game_description_block_tag"
+        tools:orientation="horizontal"
         />
 
     <LinearLayout
