--- a/app/src/main/res/layout/item_placeholder.xml
+++ b/app/src/main/res/layout/item_placeholder.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     >
 
@@ -24,6 +25,7 @@
         layout="@layout/progress"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        tools:visibility="invisible"
         />
 
 </FrameLayout>
