--- a/app/src/main/res/layout/item_screenshot.xml
+++ b/app/src/main/res/layout/item_screenshot.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ivScreenshot"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:adjustViewBounds="true"
+    tools:src="@drawable/screenshot_placeholder"
     />
